--- a/garden/index.html
+++ b/garden/index.html
@@ -5,145 +5,148 @@
     <meta name="description" content="slick Login">
     <meta name="author" content="Webdesigntuts+">
     <!--<link rel="stylesheet" type="text/css" href="style.css" />-->
-    	<style> 
+    <style>
     	body {
-    font-family: sans-serif;
-    background-color: #323B55;
-    background-image: -webkit-linear-gradient(bottom, #323B55 0%, #424F71 100%) no-repeat;
-    background-image: -moz-linear-gradient(bottom, #323B55 0%, #424F71 100%)no-repeat;
-    background-image: -o-linear-gradient(bottom, #323B55 0%, #424F71 100%)no-repeat;
-    background-image: -ms-linear-gradient(bottom, #323B55 0%, #424F71 100%)no-repeat;
-    background-image: linear-gradient(bottom, #323B55 0%, #424F71 100%)no-repeat;
-}
-*{margin: 0;padding: 0; }
-#slick-login {
-    width: 220px;
-    height: 155px;
-    position: absolute;
-    left: 50%;
-    top: 40%;
-    margin-left: -110px;
-    margin-top: -75px;
-}
-#slick-login input[type="text"],#slick-login input[type="password"] {
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-    /*positon: relative;*/
-    /*left: 0;*/
-    margin-top: 7px;
-    font-size: 14px;
-    color: #444;
-    outline: none;
-    border: 1px solid rgba(0, 0, 0, .49);
-    padding-left: 20px;
-    -webkit-background-clip: padding-box;
-    -moz-background-clip: padding-box;
-    background-clip: padding-box;
-    border-radius: 6px;
+            font-family: sans-serif;
+            background-color: #006633;
+            background-image: -webkit-linear-gradient(bottom, #006633 0%, #339933 100%) no-repeat;
+            background-image: -moz-linear-gradient(bottom, #006633 0%, #339933 100%)no-repeat;
+            background-image: -o-linear-gradient(bottom, #006633 0%, #339933 100%)no-repeat;
+            background-image: -ms-linear-gradient(bottom, #006633 0%, #339933 100%)no-repeat;
+            background-image: linear-gradient(bottom, #006633 0%, #339933 100%)no-repeat;
+        }
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        #slick-login {
+            width: 220px;
+            height: 155px;
+            position: absolute;
+            left: 50%;
+            top: 40%;
+            margin-left: -110px;
+            margin-top: -75px;
+        }
+        #slick-login input[type="text"],#slick-login input[type="password"] {
+            width: 100%;
+            height: 40px;
+            line-height: 40px;
+            /*positon: relative;*/
+            /*left: 0;*/
+            margin-top: 7px;
+            font-size: 14px;
+            color: #444;
+            outline: none;
+            border: 1px solid rgba(0, 0, 0, .49);
+            padding-left: 20px;
+            -webkit-background-clip: padding-box;
+            -moz-background-clip: padding-box;
+            background-clip: padding-box;
+            border-radius: 6px;
+
+            background-color: #fff;
+            background-image: -webkit-linear-gradient(bottom, #FFFFFF 0%, #F2F2F2 100%);
+            background-image: -moz-linear-gradient(bottom, #FFFFFF 0% #F2F2F2 100%);
+            background-image: -o-linear-gradient(bottom, #FFFFFF 0%, #,F2F2F2 100%);
+            background-image: -ms-linear-gradient(bottom, #FFFFFF 0%, #F2F2F2 100%);
+            background-image: linear-gradient(bottom, #FFFFFF 0%, #F2F2F2 100%);
+
+            -webkit-box-shadow: inset 0px 2px 0px #d9d9d9;
+            box-shadow: inset 0px 2px 0px #d9d9d9;
+
+        }
  
-    background-color: #fff;
-    background-image: -webkit-linear-gradient(bottom, #FFFFFF 0%, #F2F2F2 100%);
-    background-image: -moz-linear-gradient(bottom, #FFFFFF 0% #F2F2F2 100%);
-    background-image: -o-linear-gradient(bottom, #FFFFFF 0%, #,F2F2F2 100%);
-    background-image: -ms-linear-gradient(bottom, #FFFFFF 0%, #F2F2F2 100%);
-    background-image: linear-gradient(bottom, #FFFFFF 0%, #F2F2F2 100%);
+        #slick-login input[type="text"]:focus,#slick-login input[type="password"]:focus {
+            -webkit-box-shadow: inset 0px 2px 0px #a7a7a7;
+            box-shadow: inset 0px 2px 0px #a7a7a7;
+        }
+
+        #slick-login input:first-child {
+            margin-top: 0px;
+        }
+        #slick-login input[type="submit"] {
+            width: 110%;
+            height: 50px;
+            margin-top: 7px;
+            color: #fff;
+            font-size: 18px;
+            font-weight: bold;
+            text-shadow: 0px -1px 0px #669933;
+            outline: none;
+            border: 1px solid rgba(0, 0, 0, .49);
+             line-height: 50px;
+            -webkit-background-clip: padding-box;
+            -moz-background-clip: padding-box;
+            background-clip: padding-box;
+            border-radius: 6px;
+
+            background-color: #669933;
+            background-image: -webkit-linear-gradient(bottom, #669933 0%, #669933 100%);
+            background-image: -moz-linear-gradient(bottom, #669933 0%, #669933 100%);
+            background-image: -o-linear-gradient(bottom, #669933 0%, #669933 100%);
+            background-image: -ms-linear-gradient(bottom, #669933 0%, #669933 100%);
+            background-image: linear-gradient(bottom, #669933 0%, #669933 100%);
+
+            cursor: pointer;
+
+            -webkit-box-shadow: inset 0px 1px 0px #006633;
+            box-shadow: inset 0px 1px 0px #006633;
+
+        }
  
-    -webkit-box-shadow: inset 0px 2px 0px #d9d9d9;
-    box-shadow: inset 0px 2px 0px #d9d9d9;
+        #slick-login input[type="submit"]:hover {
+            background-color: #669933;
+            background-image: -webkit-linear-gradient(bottom, #669933 0%, #669933 100%);
+            background-image: -moz-linear-gradient(bottom, #669933 0%, #669933 100%);
+            background-image: -o-linear-gradient(bottom, #669933 0%, #669933 100%);
+            background-image: -ms-linear-gradient(bottom, #669933 0%, #669933 100%);
+            background-image: linear-gradient(bottom, #669933 0%, #669933 100%);
+            -webkit-box-shadow: inset 0px 1px 0px #aab9f4;
+            box-shadow: inset 0px 1px 0px #aab9f4;
+            margin-top: 10px;
+        }
  
-}
- 
-#slick-login input[type="text"]:focus,#slick-login input[type="password"]:focus {
-    -webkit-box-shadow: inset 0px 2px 0px #a7a7a7;
-    box-shadow: inset 0px 2px 0px #a7a7a7;
-}
- 
-#slick-login input:first-child {
-    margin-top: 0px;
-}
-#slick-login input[type="submit"] {
-    width: 110%;
-    height: 50px;
-    margin-top: 7px;
-    color: #fff;
-    font-size: 18px;
-    font-weight: bold;
-    text-shadow: 0px -1px 0px #5b6ddc;
-    outline: none;
-    border: 1px solid rgba(0, 0, 0, .49);
-     line-height: 50px;
-    -webkit-background-clip: padding-box;
-    -moz-background-clip: padding-box;
-    background-clip: padding-box;
-    border-radius: 6px;
- 
-    background-color: #5466da;
-    background-image: -webkit-linear-gradient(bottom, #5466da 0%, #768ee4 100%);
-    background-image: -moz-linear-gradient(bottom, #5466da 0%, #768ee4 100%);
-    background-image: -o-linear-gradient(bottom, #5466da 0%, #768ee4 100%);
-    background-image: -ms-linear-gradient(bottom, #5466da 0%, #768ee4 100%);
-    background-image: linear-gradient(bottom, #5466da 0%, #768ee4 100%);
- 
-    cursor: pointer;
-     
-    -webkit-box-shadow: inset 0px 1px 0px #9ab1ec;
-    box-shadow: inset 0px 1px 0px #9ab1ec;
- 
-}
- 
-#slick-login input[type="submit"]:hover {
-    background-color: #5f73e9;
-    background-image: -webkit-linear-gradient(bottom, #5f73e9 0%, #859bef 100%);
-    background-image: -moz-linear-gradient(bottom, #5f73e9 0%, #859bef 100%);
-    background-image: -o-linear-gradient(bottom, #5f73e9 0%, #859bef 100%);
-    background-image: -ms-linear-gradient(bottom, #5f73e9 0%, #859bef 100%);
-    background-image: linear-gradient(bottom, #5f73e9 0%, #859bef 100%);
-    -webkit-box-shadow: inset 0px 1px 0px #aab9f4;
-    box-shadow: inset 0px 1px 0px #aab9f4;
-    margin-top: 10px;
-}
- 
-#slick-login input[type="submit"]:active {
-    background-color: #7588e1;
-    background-image: -webkit-linear-gradient(bottom, #7588e1 0%, #7184df 100%);
-    background-image: -moz-linear-gradient(bottom, #7588e1 0%, #7184df 100%);
-    background-image: -o-linear-gradient(bottom, #7588e1 0%, #7184df 100%);
-    background-image: -ms-linear-gradient(bottom, #7588e1 0%, #7184df 100%);
-    background-image: linear-gradient(bottom, #7588e1 0%, #7184df 100%);
- 
-    -webkit-box-shadow: inset 0px 1px 0px #93a9e9;
-    box-shadow: inset 0px 1px 0px #93a9e9;
-}
-.header{
-	background: url(themes/default/images/login_back.png) no-repeat -50px -45px;
-    width: 400px;
-	height:60px;
-    margin-left: -50px;
-    /*border: 4px solid red;*/
-}
+        #slick-login input[type="submit"]:active {
+            background-color: #669933;
+            background-image: -webkit-linear-gradient(bottom, #669933 0%, #669933 100%);
+            background-image: -moz-linear-gradient(bottom, #669933 0%, #669933 100%);
+            background-image: -o-linear-gradient(bottom, #669933 0%, #669933 100%);
+            background-image: -ms-linear-gradient(bottom, #669933 0%, #669933 100%);
+            background-image: linear-gradient(bottom, #669933 0%, #669933 100%);
+
+            -webkit-box-shadow: inset 0px 1px 0px #93a9e9;
+            box-shadow: inset 0px 1px 0px #93a9e9;
+        }
+        .header{
+            background: url(themes/default/images/login_back.png) no-repeat -50px -45px;
+            width: 400px;
+            height:60px;
+            margin-left: -50px;
+        }
     	</style>
 </head>
 <body>
-	    <div id="slick-login">
-			<div class="header">
-			</div>
-			<div>
-                <div>
-                    <input type="text" id="username" placeholder="enter account" val="" />
-                </div>
-	        <div style="margin-top: 8px;">
-                <input type="password" id="password" placeholder="enter password" val="" />
+    <div id="slick-login">
+        <div class="header">
+        </div>
+        <div>
+            <div>
+                <input type="text" id="username" placeholder="enter account" val="admin" />
             </div>
-	        <div>
+            <div style="margin-top: 8px;">
+                <input type="password" id="password" placeholder="enter password" val="admin" />
+            </div>
+            <div>
                 <input type="submit" id="loginsub"  value="sign in">
             </div>
-		</div>
+        </div>
+    </div>
 </body>
 <script src="js/jquery-1.7.2.js"></script>
 <script src="./js/publicjs/common.js"></script>
 <script type="text/javascript">
-//				如果要恢复请注释掉以下两行
+//如果要恢复请注释掉以下两行
 $(function(){
 //	autoLogin();
 	$("#loginsub").focus();
@@ -178,32 +181,31 @@ $(function(){
 //		});
 //		}
 //	}
-	
 function login(){
 	
 	if($("#username").val()&&$("#password").val()){
 	var Data={
 		data:{
-			id:$("#username").val(),//在接口确定之后修改字段名称
-			pwd:$("#password").val()
+			username:$("#username").val(),//在接口确定之后修改字段名称
+			password:$("#password").val()
 		}
 	};
 	$.ajax({
 		type:"post",
 //		url:URL+"Member/member_login",//在接口确定之后修改
-		url:"http://114.55.123.85:801/index.php/Home/Member/member_login",//在接口确定之后修改
+		url:"http://localhost/PersonalGarden/index.php/Home/Admin/login",//在接口确定之后修改
 		data:JSON.stringify(Data),
 		async:true,
 		dataType:'json',
 		success:function(data){
 			//登录信息正确的时候
 			if(data.resultcode==0){
-			 	var token=data.data.token;
-				var qt1=data.data.qt1;
-				window.location="main.html?token="+token+"&&qt1="+qt1;
+			 	var token=data.data.subitem[0].token;
+                console.log(token);
+				window.location="main.html?token="+token;
 			}
 			else{
-				alert("用户名或密码错误！");
+                alert("用户名或密码错误！");
 			}
 		},
 		error: function(XMLHttpRequest, textStatus, errorThrown, data) {
@@ -215,7 +217,7 @@ function login(){
 		alert("账号密码不能为空");
 	}
 }
-//登录回车
+//键盘事件：回车登录
  document.onkeydown = function(event_e){  
         if(window.event) {  
             event_e = window.event;  
@@ -226,6 +228,5 @@ function login(){
             return false;  
         }  
     }
- 
 </script>
 </html>
