--- a/webapp/pages/UserCenter/login.html
+++ b/webapp/pages/UserCenter/login.html
@@ -6,7 +6,6 @@
     <title>登录</title>
     <link rel="stylesheet" href="../../css/foundation.min.css">
     <link rel="stylesheet" href="../../css/login.css">
-    <link rel="stylesheet" href="../../css/bootstrap.css">
     <script src="../../js/jquery-2.1.1.min.js"></script>
     <script src="../../js/foundation-5.3.3.min.js"></script>
     <script src="../../js/vendor/modernizr.min.js"></script>
@@ -20,7 +19,7 @@
             </div>
             <div class="login-box-body">
                 <p class="login-box-msg">用户登录</p>
-                <form id="loginForm" action="" method="post">
+                <!--<form id="loginForm" action="" method="post">-->
                     <script type="text/javascript">
                         $(function () {//将第一个输入框聚焦
                             $(':input:enabled:visible').filter(function() {
@@ -53,7 +52,7 @@
                         <div class="small-8 columns text-right"><a href="resetpass.html">忘记密码？</a>
                         </div>
                     </div>
-                </form>
+                <!--</form>-->
             </div>
         </div>
     </div>
@@ -77,7 +76,7 @@
             };
             $.ajax({
                 type:"post",
-                url:"http://localhost/PersonalGarden/index.php/Home/Login/login",
+                url:"http://localhost:8080/PersonalGarden/index.php/Home/Login/login",
                 data:JSON.stringify(Data),
                 async:true,
                 dataType:'json',
