--- a/webapp/pages/UserCenter/register.html
+++ b/webapp/pages/UserCenter/register.html
@@ -6,7 +6,6 @@
     <title>登录</title>
     <link rel="stylesheet" href="../../css/foundation.min.css">
     <link rel="stylesheet" href="../../css/login.css">
-    <link rel="stylesheet" href="../../css/bootstrap.css">
     <script src="../../js/jquery-2.1.1.min.js"></script>
     <script src="../../js/foundation-5.3.3.min.js"></script>
     <script src="../../js/vendor/modernizr.min.js"></script>
@@ -20,7 +19,7 @@
         </div>
         <div class="register-box-body">
             <p class="register-box-msg">用户注册</p>
-            <form id="registeForm" action="" method="post">
+            <!--<form id="registerForm" action="" method="post">-->
                 <script type="text/javascript">
                     $(function () {//将第一个输入框聚焦
                         $(':input:enabled:visible').filter(function() {
@@ -44,6 +43,7 @@
                 <div class="row">
                     <div class="small-12 columns">
                         <input id="password2" name="password" placeholder="确认密码" maxlength="80" type="password">
+                        <!--<p>两次输入的密码不一致</p>-->
                     </div>
                 </div>
 
@@ -57,7 +57,7 @@
                     <div class="small-6 columns text-left"><a href="login.html">返回</a>
                     </div>
                 </div>
-            </form>
+            <!--</form>-->
         </div>
     </div>
 </div>
@@ -65,38 +65,45 @@
 <!--控件初始化-->
 <script type="text/javascript">
     $(function(){
-        $("#loginsub").focus();
-        $("#login_btn").click(function(){
-            login();
+        $("#register_btn").focus();
+        $("#register_btn").click(function(){
+            register();
         });
         $(document).foundation();
-    })
-    function login(){
-        if($("#username").val()&&$("#password").val()){
+    });
+    function register(){
+        var pass1 = $("#password1").val();
+        var pass2 = $("#password2").val();
+        if(pass1 != pass2){
+            alert("两次密码输入不一致！");
+        }
+        if($("#username").val()&&pass1&&pass2){
             var Data={
                 data:{
                     username:$("#username").val(),//在接口确定之后修改字段名称
-                    password:$("#password").val()
+                    password1:pass1,
+                    password2:pass2
                 }
             };
             $.ajax({
                 type:"post",
-                url:"http://localhost/PersonalGarden/index.php/Home/Login/login",
+                url:"http://localhost:8080/PersonalGarden/index.php/Home/Login/register",
                 data:JSON.stringify(Data),
                 async:true,
                 dataType:'json',
                 success:function(data){
-                    //登录信息正确的时候
+                    //信息输入正确的时候
                     if(data.resultcode==0){
-                        var token=data.data.subitem[0].token;
-                        console.log(token);
-                        window.location="../HomePage/home.html?token="+token;
+                        console.log("resultmsg"+data.resultmsg);
+                        alert("注册成功！");
+//                        window.location="login.html";
                     }
                     else{
-                        alert("用户名或密码错误！");
+                        alert(data.resultmsg);
                     }
                 },
                 error: function(XMLHttpRequest, textStatus, errorThrown, data) {
+                    alert("failed");
                     alert(errorThrown);
                 }
             });
@@ -112,7 +119,7 @@
         }
         var int_keycode = event_e.charCode||event_e.keyCode;
         if( int_keycode == '13' ) {
-            login();
+            register();
             return false;
         }
     }
